# rigma

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
frontend-v2/: index.html  package-lock.json  package.json  vite.config.ts
frontend-v2/src/: App.tsx  FloatWindow.tsx  Palette.tsx  WorkspacePanel.tsx  main.tsx  store.ts  tokens.css
frontend-v2/src/autonomous/: AutonomousSurface.tsx
src/rigma/: __init__.py  __main__.py  bench.py  cli.py  context.py  gguf_meta.py  hangar.py  hf_browse.py  memory.py  mission.py  models.py  presets.py  probe.py  rag.py  registry.py  resolve.py  runs.py  runtime.py  serve.py  server_ops.py  sessions.py  state.py  tools.py  workspace.py
tests/: conftest.py  fake_oai_server.py  fake_raggity_server.py  fake_server.py  test_auto_compact.py  test_autonomous_run.py  test_bench.py  test_bench_sweep.py  test_cli.py  test_cli_chat.py  test_cli_rag.py  test_context_masking.py  test_download_policy.py  test_download_resume.py  test_driving_message.py  test_fallback_ladder.py  test_first_load_calibrate.py  test_gguf_meta.py  test_hangar.py  test_hangar_api.py  test_hardware_smoke.py  test_hf_browse.py  test_launch_env.py  test_lifecycle_b2.py  test_md_js.py  test_memory_lifecycle.py  test_memory_mining.py  test_memory_phase23.py  test_mission.py  test_models.py  test_presets.py  test_probe.py  test_rag.py  test_registry.py  test_registry_update.py  test_resolve.py  test_resolve_b3.py  test_resolve_calibration.py  test_run_tools.py  test_runs_store.py  (+21 more)
tools/ui-smoke/: README.md  smoke_browser.py  smoke_server.py
(+42 files in other folders)
