[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rigma"
version = "0.8.0"
description = "Hardware-aware local LLM deployment: probe, resolve, run."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "typer>=0.12",
  "httpx>=0.27",
  "psutil>=5.9",
  "huggingface_hub>=0.23",
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "pillow>=10",
]

[project.optional-dependencies]
nvidia = ["pynvml>=11.5"]
dev = ["pytest>=8", "ruff>=0.4"]

[project.scripts]
rigma = "rigma.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
markers = ["hardware: requires real GPU/network; excluded in CI"]
addopts = "-q"

[tool.hatch.build.targets.wheel]
packages = ["src/rigma"]
